2004-02-13 11:36  PeterB

	* libbalsa/mailbox_mbox.c: set msg_info.start as
	g_mime_parser_get_from_offset() instead of end of previous message
	(they can be different, if previous message has trailing garbage,
	like some sent by the Balsa list-server!).

2004-02-12 21:44  PeterB

	* libbalsa/mailbox_local.c, libbalsa/mailbox_local.h,
	libbalsa/mailbox_maildir.c, libbalsa/mailbox_mbox.c,
	libbalsa/mailbox_mh.c, src/main-window.c: remove
	LibBalsaMailboxLocal::msg_list.
	* libbalsa/mailbox_mbox.c: set message->msgno and message->mailbox
	when creating msg_info.message.

2004-02-11 21:48  PeterB

	* src/balsa-message.c: possible fix for bug #109252.
	* libbalsa/send.c: msg_queue_item_new() doesn't need to set
	LibBalsaMessage; use libbalsa_mailbox_get_message() instead of
	LIBBALSA_MAILBOX_LOCAL(outbox)->msg_list; lock/unlock only if
	BALSA_USE_THREADS.
	* libbalsa/mailbox_pop3.c: use libbalsa_mailbox_get_message()
	instead of LIBBALSA_MAILBOX_LOCAL()->msg_list.
	* libbalsa/mailbox_mbox.c: rewrite message status headers in place,
	if possible; use new GMime g_mime_parser_set_respect_content_length
	API to avoid bar From_ lines in libmutt mboxes; use only one
	GMimeStream to access mbox when syncing; fix interpretation of 'O'
	status flag ('O' => not recent).
	* libbalsa/mailbox_local.c: fix comment.
	* libbalsa/mailbox.c: check whether mailbox->msg_tree has been
	created.

2004-02-09  Pawel Salek

	* libbalsa/mailbox.c: be more careful when destroying msg_tree.
	Set holding_thread carefully.
	* libbalsa/message.c: first check, then thread.
	* libbalsa/imap/imap-commands.c: set unseen on reopening.
	* src/balsa-index.[ch]: scroll to last if no unseen.
	* src/main-window.[ch]: remove deadlocks in a brute way.

2004-02-08  Pawel Salek

	* libbalsa/mailbox.h: add first_unseen field.
	* libbalsa/mailbox_{imap,local}.c: add support for it.
	* src/balsa-index.[ch]: use it to scroll on open.
	* src/main-window.c: ditto.

2004-02-08 Darko Obradovic <dobradovic gmx.de>
